Bug 324880 - Widget doesn't show signal strength for mobile broadband
Summary: Widget doesn't show signal strength for mobile broadband
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-13 12:03 UTC by Michael Krauth
Modified: 2013-09-22 22:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.10
Sentry Crash Report:


Attachments
screenshot of non working kde widget (29.09 KB, image/png)
2013-09-13 12:05 UTC, Michael Krauth
Details
screenshot of working gnome applet (11.16 KB, image/png)
2013-09-13 12:05 UTC, Michael Krauth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Krauth 2013-09-13 12:03:11 UTC
Since a few month, the Widget (Version 0.9.0.9 (nm09 20130615)) doesn't show the signal strength for mobile broadband connections.
I'm using KDE 4.11.1 and an integrated device. lsusb says: Bus 002 Device 003: ID 0bdb:1911 Ericsson Business Mobile Networks BV
Before it worked and when I try the gnome applet, it works too.

Screenshots: 
don't work: http://www.dropspamhere.de/nm/networkmanager-kde.png
works: http://www.dropspamhere.de/nm/nm-applet.png

42m

Reproducible: Always

Steps to Reproduce:
1. open the Widget.
2. see no signal strength :)
Actual Results:  
No signal strength is provided

Expected Results:  
Visualization of signal strength
Comment 1 Michael Krauth 2013-09-13 12:05:02 UTC
Created attachment 82314 [details]
screenshot of non working kde widget
Comment 2 Michael Krauth 2013-09-13 12:05:53 UTC
Created attachment 82315 [details]
screenshot of working gnome applet
Comment 3 Michael Krauth 2013-09-13 12:22:37 UTC
It doesn't matter, if I am conected or not to mobile broadband, it doesn't show the signal strength.

Btw.: the versions mentioned above are the version I actually use, but all versions since about half a year are affected.
Comment 4 Michael Krauth 2013-09-13 12:26:33 UTC
Another comment :)

When I hover over the "signal bar" it shows me: "Signal quality 0%"

42m
Comment 5 Lamarque V. Souza 2013-09-22 22:26:28 UTC
Git commit 54c406678cbcfe75245e337c843d53c9ee886faf by Lamarque V. Souza.
Committed on 22/09/2013 at 22:22.
Pushed by lvsouza into branch 'nm09'.

Fix signalQualityChanged and accessTechnologyChanged signals.
FIXED-IN: 0.9.0.10

M  +1    -1    applet/networkmanager.cpp
M  +1    -1    plasma_nm_version.h
M  +3    -3    solidcontrolfuture/libs/solid/control/ifaces/modemgsmnetworkinterface.h
M  +2    -2    solidcontrolfuture/solid/modemmanager-0.5/modemgsmnetworkinterface.cpp

http://commits.kde.org/networkmanagement/54c406678cbcfe75245e337c843d53c9ee886faf