Fix signalQualityChanged and accessTechnologyChanged signals.

BUG: 324880
FIXED-IN: 0.9.0.10